src/snapshots/tests__test_document.snap
---
created: "2019-08-15T08:26:48.759913Z"
creator: insta@0.10.1
source: src/main.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "mediumBright",
                value: Color(
                    Color {
                        r: 170,
                        g: 187,
                        b: 204,
                        a: 0.33,
                    },
                ),
            },
        ),
        Variable(
            Declaration {
                identifier: "red",
                value: Color(
                    Color {
                        r: 255,
                        g: 0,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
        Variable(
            Declaration {
                identifier: "white",
                value: Color(
                    Color {
                        r: 255,
                        g: 255,
                        b: 255,
                        a: 1.0,
                    },
                ),
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "root",
                items: [
                    Declaration(
                        Declaration {
                            identifier: "ApplicationBackground",
                            value: ColorSet(
                                ColorSet {
                                    light: Variable(
                                        "white",
                                    ),
                                    dark: Color(
                                        Color {
                                            r: 20,
                                            g: 21,
                                            b: 23,
                                            a: 1.0,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    RuleSet(
                        RuleSet {
                            identifier: "NumericInput",
                            items: [
                                RuleSet(
                                    RuleSet {
                                        identifier: "ActionKey",
                                        items: [
                                            Declaration(
                                                Declaration {
                                                    identifier: "Background",
                                                    value: ColorSet(
                                                        ColorSet {
                                                            light: Variable(
                                                                "red",
                                                            ),
                                                            dark: Color(
                                                                Color {
                                                                    r: 255,
                                                                    g: 0,
                                                                    b: 255,
                                                                    a: 1.0,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            Declaration(
                                                Declaration {
                                                    identifier: "Highlight",
                                                    value: ColorSet(
                                                        ColorSet {
                                                            light: Color(
                                                                Color {
                                                                    r: 204,
                                                                    g: 204,
                                                                    b: 204,
                                                                    a: 1.0,
                                                                },
                                                            ),
                                                            dark: Color(
                                                                Color {
                                                                    r: 0,
                                                                    g: 0,
                                                                    b: 0,
                                                                    a: 1.0,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
}
