src/snapshots/tests__test_ruleset.snap
---
created: "2019-08-15T12:40:09.784581Z"
creator: insta@0.10.1
source: src/main.rs
expression: doc
---
RuleSet {
    identifier: "root",
    items: [
        Declaration(
            Declaration {
                identifier: "ApplicationBackground",
                value: ColorSet(
                    ColorSet {
                        light: Variable(
                            "white",
                        ),
                        dark: Color(
                            Color {
                                r: 20,
                                g: 21,
                                b: 23,
                                a: 1.0,
                            },
                        ),
                    },
                ),
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "Key",
                items: [
                    Declaration(
                        Declaration {
                            identifier: "Background",
                            value: ColorSet(
                                ColorSet {
                                    light: Variable(
                                        "red",
                                    ),
                                    dark: Color(
                                        Color {
                                            r: 255,
                                            g: 0,
                                            b: 255,
                                            a: 1.0,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "AnotherKey",
                items: [
                    Declaration(
                        Declaration {
                            identifier: "Highlight",
                            value: ColorSet(
                                ColorSet {
                                    light: Color(
                                        Color {
                                            r: 204,
                                            g: 204,
                                            b: 204,
                                            a: 1.0,
                                        },
                                    ),
                                    dark: Color(
                                        Color {
                                            r: 0,
                                            g: 0,
                                            b: 0,
                                            a: 1.0,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
